# kf-feeder

./: Cargo.toml
src/: main.rs  router.rs  transcode.rs  util.rs
src/transcode/: jvcmusic_co_jp.rs  kadokawa_co_jp.rs  kemono_friends_sega_jp.rs
