[package]
name = "kf-feeder"
version = "0.0.0"
authors = ["Yu Onaga <ursus.cauda.elongata@gmail.com>"]
license = "AGPL-3.0-only"
edition = "2018"
publish = false
description = """
A Web application that converts Kemono Friends-related Web pages to Atom feeds.
"""

[dependencies]
anyhow = "1"
auto_enums = { version = "0.7" }
bytes = "0.5"
futures = "0.3"
hyper = "0.13"
json = { version = "1.0", package = "serde_json" }
reqwest = { version = "0.10", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
tokio = { version = "0.2", features = ["macros", "rt-core"] }
url = "2"
xml = { version = "0.14", package = "quick-xml" }
